# killarchive-rs

./: Cargo.toml  killarchive-rs  killarchive-rs-completion.bash
src/: error.rs  main.rs
src/albion_api/: mod.rs
src/albion_api/fetcher/: alliances.rs  guilds.rs  mod.rs  players.rs
src/albion_api/types/: alliance.rs  guild.rs  mod.rs  parse_helper.rs  player.rs
src/schema/: mod.rs
src/socket/: mod.rs
src/web/: mod.rs  players.rs
src/web/tera/: root.html
src/web/tera/players/: index.html  rows.html  show.html
