[package]
name = "killarchive"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
rocket = "0.5.1"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.12", features = ["runtime"] }
